<resources>
    <string name="app_name">MyLibrary</string>
    <string name="my_library_name">我的</string>
    <string name="community_name">社区</string>
    <string name="order_name">历史订单</string>
    <string name="activity_name">活动</string>
    <string name="login">登            录</string>
    <string name="community">社区</string>
    <string name="search_canale">取消</string>
    <string name="gus_you_like">猜你喜欢</string>
    <string name="tip_in_gus">全场免费送货上门</string>
    <string name="index_search">搜索</string>
    <string name="classify_index">首页</string>
    <string name="classify_tudou">土豆</string>
    <string name="classify_qiezi">茄子</string>
    <string name="classify_nangua">南瓜</string>
    <string name="classify_kugua">苦瓜</string>

    <!--登录注册相关页面start-->
    <string name="account">用户名/邮箱/手机号</string>
    <string name="password">密码</string>
    <string name="btn_login">请登录</string>
    <string name="register">手机快速注册</string>
    <string name="forgot_pass">忘记密码</string>
    <string name="login_byOther">第三方登录</string>

    <string name="input_phone">1.输入手机号 ></string>
    <string name="input_code">2.输入验证码 ></string>
    <string name="set_password">3.设置密码</string>
    <string name="btn_get_code">获取验证码</string>

    <string name="code_send_to">验证码已发送到151****1275</string>
    <string name="code_fail">验证码不正确</string>
    <string name="btn_submit_code">提交验证码</string>

    <string name="pwd_constraint">密码长度8-32位，须包含数字、字母、符号至少两种或以上元素</string>
    <string name="btn_submit_confirm">确认提交</string>

    <string name="verify_type">1.选择验证方式 ></string>
    <string name="verify_safe">2.安全验证 ></string>
    <string name="find_pwd">3.找回登录密码</string>
    <string name="msg">短信</string>
    <string name="start_verify">立即验证</string>
    <!--登录注册相关页面end-->

    <!--首页头部-->
    <string name="area_zunyi">遵义</string>
    <string name="item_name">风骚大西瓜</string>
    <string name="item_price_now">$85</string>
    <string name="item_price_past">$100</string>
    <string name="item_similar">找相似</string>
    <string name="area_tip">您正在看：</string>
    <string name="last_looking">最近访问</string>
    <string name="hot_spots">热门地点</string>

    <!--个人中心页面开始-->
    <string name="nickname">小鬼跳鬼舞</string>
    <string name="btn_edt">编辑</string>
    <string name="tv_my_order">我的订单</string>
    <string name="tv_find_all_orders">查看全部订单</string>
    <string name="tv_pend_payment">待付款</string>
    <string name="tv_pend_ship">待发货</string>
    <string name="tv_ship">已发货</string>
    <string name="tv_pend_evaluation">待评价</string>
    <string name="tv_confirm_ship">确认收货</string>
    <string name="tv_after_sale_service">售后服务</string>
    <string name="tv_address_manger">地址管理</string>
    <string name="tv_my_star">我的收藏</string>
    <string name="tv_my_foot">我的足迹</string>
    <string name="tv_coupon">优惠券</string>
    <string name="tv_my_card_package">我的卡包</string>
    <string name="tv_online_service">在线服务</string>
    <string name="tv_help_center">帮助中心</string>

    <string name="tv_setting">设置</string>
    <string name="tv_account_and_safe">账户与安全</string>
    <string name="tv_pay_setting">支付设置</string>
    <string name="tv_comm">通用</string>
    <string name="tv_private">隐私</string>
    <string name="tv_about_software">关于软件</string>
    <string name="tv_check_update">检查更新</string>
    <string name="tv_contact_us">联系我们</string>
    <string name="btn_account_switch">切换账号</string>
    <string name="btn_logout">退出登录</string>

    <string name="tv_setting_safe">安全设置</string>
    <string name="tv_phone">手机号</string>
    <string name="tv_phone_number">151****1275</string>
    <string name="tv_setting_pwd">设置密码</string>
    <string name="tv_login_device">其它设备登录</string>

    <string name="tv_per_msg">个人信息</string>
    <string name="tv_avatar">头像</string>
    <string name="tv_nickname">昵称</string>
    <string name="tv_for_nickname">小鬼跳鬼舞</string>
    <string name="tv_sex">性别</string>
    <string name="tv_for_sex">性别</string>
    <string name="tv_birthday">出生日期</string>
    <string name="tv_for_birthday">1997/10/18</string>
    <string name="tv_signature">签名</string>
    <string name="tv_for_signature">哇，张哥，你好棒棒呀！</string>

    <string name="business_name">威宁土豆专卖店</string>
    <string name="business_pro_description">来自威宁的乌蒙高原土豆纯天然无污染，买一个，买不了吃亏，买不了上当</string>
    <string name="commodity_count">共2件商品</string>
    <string name="price_count">合计：100.00元</string>
    <string name="btn_delete_order">删除订单</string>
    <string name="btn_remind_ship">发货提醒</string>
    <string name="btn_change_address">修改地址</string>
    <string name="btn_see_logistics">查看物流</string>
    <string name="btn_cancel_order">取消订单</string>
    <string name="btn_pend_payment">待付款</string>

    <!--个人中心页面结束-->

</resources>
