<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    >

    <ImageView
        android:id="@+id/iv_item_pic"
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        tools:srcCompat="@tools:sample/avatars[0]" />

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="128dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/item_name"
        />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/tv_item_price_now"
        android:layout_width="29dp"
        android:layout_height="19dp"
        android:text="@string/item_price_now"
        />

    <TextView
        android:id="@+id/tv_item_price_past"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px7"
        android:text="@string/item_price_past"
        />

    <TextView
        android:id="@+id/tv_item_similar"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginLeft="@dimen/px17"
        android:text="@string/item_similar"
        />
</LinearLayout>

</LinearLayout>