<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="30dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_register">

        <TextView
            android:id="@+id/tv_verify_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_type"
            android:layout_weight="1"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_verify_safe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_safe"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="#ff6600"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/tv_find_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_pwd"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="请输入您的手机号"
        android:textSize="20sp"
        android:background="@drawable/bg_white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="请输入短信中的验证码"
            android:textSize="16sp"
            android:background="@drawable/bg_white"
            android:layout_weight="4"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/btn_get_code"
            android:textSize="18sp"
            android:background="@drawable/bg_btn"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/code_fail"
        android:textColor="#ff0033"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_submit_code"
        android:background="@drawable/bg_btn"/>

</LinearLayout>