<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gray">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/return_par"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_per_msg"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bg_gray">

        <TextView
            android:id="@+id/tv_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_avatar"
            android:textSize="20sp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <com.example.mylibrary.fragment.per_center.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/brilliantstz"
            android:layout_toLeftOf="@+id/iv_right"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/iv_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/to_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bg_gray">

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_nickname"
            android:textSize="20sp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_for_nickname"
            android:textSize="20sp"
            android:layout_toLeftOf="@id/iv_nickname_right"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/iv_nickname_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/to_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bg_gray">

        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sex"
            android:textSize="20sp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_for_sex"
            android:textSize="20sp"
            android:layout_toLeftOf="@id/iv_sex_right"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/iv_sex_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/to_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bg_gray">

        <TextView
            android:id="@+id/tv_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_birthday"
            android:textSize="20sp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_for_birthday"
            android:textSize="20sp"
            android:layout_toLeftOf="@id/iv_nickname_birthday"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/iv_nickname_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/to_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bg_gray">

        <TextView
            android:id="@+id/tv_signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_signature"
            android:textSize="20sp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_for_signature"
            android:textSize="20sp"
            android:layout_toLeftOf="@id/iv_nickname_signature"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/iv_nickname_signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/to_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>



</LinearLayout>